# swipe_telegram_bot

./: .gitignore  bot.py  pyproject.toml  requirements.txt  test_file.py
filters/: chat_type.py  correct_email_filter.py  find_username.py  state_still_in_validation_filter.py
handlers/: add_ads.py  add_appartment.py  change_language.py  checkin.py  common.py  group_games.py  invite.py  list_of_ads.py  login.py  main_menu.py  my_profile.py  ordering_food.py  sign_up.py  states.py  usernames.py
keyboards/: cancel_keyboard.py  checkin.py  choose_language_keyboard.py  create_ads_keyboard.py  create_appartment_keyboard.py  invite_keyboard.py  main_keyboard.py  main_my_profile_keyboard.py  sign_up_update_keyboard.py  simple_row.py
locales/en/LC_MESSAGES/: messages.mo  messages.po
locales/uk/LC_MESSAGES/: messages.mo  messages.po
middlewares/: auth_middlewares.py  loacalization_middlewares.py  localization_middlewares.py  sign_up_middlewares.py  stop_media_group_replication_middleware.py  weekend.py
services/: get_secret_values.py  request_to_swipeapi.py  test_service.py
